@@ -6,6 +6,8 @@ xine-lib (1.1.8) (Unreleased)
     capable boxes it's probably worse than our own code).
   * Rename endianness-reading macros so that they don't collide with Solaris
     system macros. BE_/LE_ are now _X_BE_ and _X_LE_.
+  * Add an extra function to allow front ends to rename their old,
+    badly-named configuration items.
 	
 xine-lib (1.1.7)
   * Support libdca (new name for libdts) by shuffling around the dts.h file.
